--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -381,6 +381,15 @@ blockquote:before {
 
 }
 
+/* MAP */
+#map {
+    background-color: #8d3d5d;
+    width: 100%;
+    height: 560px;
+    position: relative;
+    z-index: 0;
+}
+
 /* FOOTER */
 
 footer {
